tutorial/level_3/M5_migration_capstones/4_capstone_multi_cluster_platform/manifests/managed-cluster-west.yaml
# Namespace for the managed cluster resources
apiVersion: v1
kind: Namespace
metadata:
  name: production-west
  labels:
    app: capstone-platform
    tutorial-level: "3"
    tutorial-module: "M5"
    cluster.open-cluster-management.io/managedCluster: production-west
